# Kubic_Rubica_OpenGL

./: CMakeLists.txt  README.md
res/: main.glslv
src/: Kubic_Rubica.hpp  main.cpp
src/graphics/: Shader.cpp  Shader.h
src/window/: camera.cpp  camera.h  events.cpp  events.h  window.cpp  window.h
